--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agora-sdk-quickstart",
+  "name": "agora-chat-application",
   "private": true,
   "version": "0.0.0",
   "type": "module",
